--- a/websites/12c/unit-9/design-solutions.html
+++ b/websites/12c/unit-9/design-solutions.html
@@ -5,7 +5,7 @@
 <title>Design Solutions</title> <!--this is Muzamil's page-->
 
 <link rel="stylesheet" href="css/bulma.css">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="css/Muzamil.css">
 
 <script src="https://kit.fontawesome.com/21cce3fc2f.js" crossorigin="anonymous"></script>
 
